# src/controllers/game.ts
@@ -1,5 +1,6 @@
 import { Request, RequestHandler, Response } from 'express';
-import Game, { FillBoard } from '../models/game';
+import Game, { IGame } from '../models/game';
+import { ResetBoard } from '../lib/chess';
 import Joi from '@hapi/joi';
 import requestMiddleware from '../middleware/request-handler';
 
@@ -17,7 +18,7 @@ export const create: RequestHandler = async (req: Request<{}, {}, ICreateBody>, 
     console.log(req.body);
 
     let game = new Game({ name, board: new Array<number>(64) });
-    game = FillBoard(game);
+    game = ResetBoard(game);
     await game.save();
 
     res.status(201).send({
@@ -26,8 +27,26 @@ export const create: RequestHandler = async (req: Request<{}, {}, ICreateBody>, 
     });
 };
 
-const getState: RequestHandler = async (req, res, next) => {
-    res.status(501).send();
+// Gets the game by ID including state & current player
+export const getGame: RequestHandler = async (req: Request, res) => {
+    const { gameid } = req.params;
+
+    let game = await Game.findById(gameid);
+    if (!game) {
+        return res.status(404).send({
+            error: 'Game not found'
+        });
+    }
+
+    res.status(200).send({
+        game: game.toJSON()
+    });
+};
+
+export const getMoves = async (req: Request, res) => {
+    const { gameid, coord } = req.params;
+
+    res.status(200)
 };
 
 export default requestMiddleware(create, { validation: { body: createGameSchema } });
